--- a/app/views/book/_books.html.erb
+++ b/app/views/book/_books.html.erb
@@ -14,26 +14,9 @@
             <div class="h-2/4">
               <div class="flex">
                 <h3 class="font-semibold text-lg md:text-xl w-7/8"><%= book.title %></h3>
-                <div class="w-1/8">
-                  <% if current_user.bookmarks.exists?(book: book) %>
-                    <%= form_with(url: book_bookmarks_path(book), method: :delete, class: 'bookmark-form', data: { book_id: book.id }, local: false) do |f| %>
-                      <button type="submit" class="btn p-2 shadow-xl bg-[#FC674E] rounded-lg">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" class="bi bi-bookmark-fill" viewBox="0 0 16 16">
-                          <path d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2z"/>
-                        </svg>
-                      </button>
-                    <% end %>
-                  <% else %>
-                    <%= form_with(url: book_bookmarks_path(book), method: :post, class: 'bookmark-form', data: { book_id: book.id }, local: false) do |f| %>
-                      <button type="submit" class="btn p-2 shadow-xl fill-[#BDBDBD] bg-white rounded-lg">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#BDBDBD" class="bi bi-bookmark-plus" viewBox="0 0 16 16">
-                          <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l5.26 2.87A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.26-2.342a.5.5 0 0 1 .484 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
-                          <path d="M6 8a.5.5 0 0 0 .5.5h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5V5.5a.5.5 0 0 0-1 0V7H5.5A.5.5 0 0 0 6 8z"/>
-                        </svg>
-                      </button>
-                    <% end %>
-                  <% end %>
-                </div>
+                <%= turbo_frame_tag "book_#{book.id}_bookmark" do %>
+                  <%= render 'bookmarks/bookmark_button', book: book, bookmarked: current_user.bookmarks.exists?(book: book) %>
+                <% end %>
               </div>
               <div class="w-7/8 flex justify-center items-center space-x-2 text-xs">
                 <p>Added by <span class="font-semibold"><%= book.user.first_name %> <%= book.user.last_name %></span></p>
