--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,13 +7,21 @@
         <div class="space-y-4">
           <h1 class="md:text-3xl md:font-bold font-semibold text-xl">Books</h1>
           <div class="flex">
-            <div class="filter w-full md:w-1/2">
-              <input class="btn bg-[#F9F9F9] text-gray-100 shadow-none border-none filter-reset" type="radio" name="metaframeworks" aria-label="All"/>
-              <input class="btn bg-[#F9F9F9] text-gray-100 shadow-none border-none" type="radio" name="metaframeworks" aria-label="Education"/>
-              <input class="btn bg-[#F9F9F9] text-gray-100 shadow-none border-none" type="radio" name="metaframeworks" aria-label="Business"/>
-              <input class="btn bg-[#F9F9F9] text-gray-100 shadow-none border-none" type="radio" name="metaframeworks" aria-label="Sci-fi"/>
+            <div class="flex flex-wrap gap-2 w-full md:w-3/5" data-controller="book-search">
+              <% Category.all.each do |category| %>
+                <label class="cursor-pointer">
+                  <input type="checkbox"
+                        class="hidden peer"
+                        value="<%= category.name %>"
+                        data-book-search-target="checkbox"
+                        <%= "checked" if params[:categories]&.include?(category.name) %> />
+                  <span class="btn bg-[#F9F9F9] text-gray-700 shadow-none border-none w-fit peer-checked:bg-orange-500 peer-checked:text-white">
+                    <%= category.name %>
+                  </span>
+                </label>
+              <% end %>
             </div>
-            <div class="hidden lg:flex w-1/2 justify-end">
+            <div class="hidden lg:flex w-2/5 justify-end">
               <div data-controller="book-search" class="ml-auto">
                 <%= render "select_sort" %>
               </div>
